Telemachia Fix + Pyrofusion synergies

--- a/content/Infusions.html
+++ b/content/Infusions.html
@@ -112,7 +112,8 @@
       <div class="tab-pane text-center" id="aerofusion-infusion" role="tabpanel"
         aria-labelledby="aerofusion-infusion-list">
         <h2 class="arjulian">Aerofusion</h2>
-        <img src="../assets/tech_trees/infusions_aero_full.png" class="mt-2 mb-5 infusion-tree" style="height: 644px; width: 500px;">
+        <img src="../assets/tech_trees/infusions_aero_full.png" class="mt-2 mb-5 infusion-tree"
+          style="height: 644px; width: 500px;">
         <!-- <img src="../assets/tech_trees/infusions_aero_full.png" class="mt-2 mb-5" style="height:auto; width: auto;max-height: 644px; max-width: 500px;"> -->
         <p class="mb-2 text-left">Aerofusion allows control over air and, by extension, wind. Air motes are constantly
           moving and while the untrained eye may see them as agents of chaos, they are quite the opposite. They are a
@@ -441,7 +442,8 @@
       <div class="tab-pane text-center" id="bloodfusion-infusion" role="tabpanel"
         aria-labelledby="bloodfusion-infusion-list">
         <h2 class="arjulian">Bloodfusion</h2>
-        <img src="../assets/tech_trees/infusions_blood_full.png" class="mt-2 mb-5 infusion-tree" style="height: 500px; width: 500px;">
+        <img src="../assets/tech_trees/infusions_blood_full.png" class="mt-2 mb-5 infusion-tree"
+          style="height: 500px; width: 500px;">
         <p class="mb-2 text-left">Bloodfusion grants power over blood, the liquid lifeforce of all creatures. Blood
           motes are passionate and perky, giving a first impression of lightheartedness and gaiety. However, once
           enraged, these motes do not hesitate to drink greedily and kill. This affinity bestows these traits to the
@@ -547,10 +549,13 @@
                 <li><b>Duration: </b>1 minute to 1 hour*</li>
                 <li>
                   <p>With a word, a target you see within range has its own blood lift to the surface of its body,
-                    marking it with an odd rune. So long as a creature bears this mark, you will know its location. Once
-                    per turn, when the creature takes physical damage, you heal hit points equal to your Constitution
-                    modifier. If the creature dies, you gain a temporary Hit Die that lasts until you take a long rest.
-                    You can only gain up to 2 temporary Hit Die with this ability.</p>
+                    marking it with an odd
+                    rune. So long as a creature bears this mark, you will know its location. Once per round, when the
+                    creature takes
+                    physical damage, you heal hit points equal to your Constitution modifier. If the creature dies, you
+                    gain a temporary Hit
+                    Die that lasts until you take a long rest. You can only gain up to 2 temporary Hit Die with this
+                    ability.</p>
                   <p>If a marked creature dies before the duration is over, you may transfer the mark to another
                     creature within range as a free action. If you activate this ability again, the first mark
                     dissipates.</p>
@@ -701,7 +706,8 @@
       <div class="tab-pane text-center" id="hydrofusion-infusion" role="tabpanel"
         aria-labelledby="hydrofusion-infusion-list">
         <h2 class="arjulian">Hydrofusion</h2>
-        <img src="../assets/tech_trees/infusions_hydro_full.png" class="mt-2 mb-5 infusion-tree" style="height: 500px; width: 500px;">
+        <img src="../assets/tech_trees/infusions_hydro_full.png" class="mt-2 mb-5 infusion-tree"
+          style="height: 500px; width: 500px;">
         <p class="mb-2 text-left">Hydrofusion is the ability to manipulate the elemental motes that make water. This
           affinity for water often marks the bearer with a fluidity of movement, a friendlier demeanor, or a graceful
           smile that provides comfort to those around them.</p>
@@ -872,7 +878,7 @@
                 <li>
                   <p>You concentrate water into a powerful jet to spear your enemy. You must have an adequate water
                     source such as a ration of water held in a waterskin. Make a ranged infusion attack at one creature
-                    you can see within range. On a hit, your spear deals 1d6 piercing damage per point in your pool
+                    you can see within range. On a hit, your spear deals 1d4 piercing damage per point in your pool
                     (maximum 5), and the water is spent.
                   <ul>
                     <li><b>Miss</b>: The water splashes harmlessly against your target and is lost unless you can spend
@@ -1078,7 +1084,8 @@
       <div class="tab-pane text-center" id="pyrofusion-infusion" role="tabpanel"
         aria-labelledby="pyrofusion-infusion-list">
         <h2 class="arjulian">Pyrofusion</h2>
-        <img src="../assets/tech_trees/infusions_pyro_full.png" class="mt-2 mb-5 infusion-tree" style="height: 576px; width: 500px;">
+        <img src="../assets/tech_trees/infusions_pyro_full.png" class="mt-2 mb-5 infusion-tree"
+          style="height: 576px; width: 500px;">
         <p class="mb-2 text-left">Pyrofusion grants control over flame. Fire motes are erratic, quick to anger, and
           dangerous when infuriated. This affinity gifts a fusist with a piercing stare, a high body temperature, and an
           eagerness for fight whether it one of wits or to the death.</p>
@@ -1158,15 +1165,30 @@
                     continue to concentrate on this ability, you can select a new direction for the line to affect as a
                     free action.</p>
                   <p>Your stream sets fire to combustibles and damages objects in the area. It can melt metals with low
-                    melting points, such as lead, gold, copper, silver, and bronze. If the damage caused to an
-                    interposing barrier shatters or breaks through it, the stream may continue beyond the barrier if the
-                    area permits; otherwise it stops at the barrier.</p>
+                    melting points, such
+                    as lead, gold, copper, silver, and bronze. If the damage causes an interposing barrier to shatter or
+                    breaks through it,
+                    the stream may continue beyond the barrier if the area permits; otherwise it stops at the barrier.
+                  </p>
                   <p><b>Empower</b>: If you expend 1 Hit Die, you can create a second line of fire using your other
                     hand. If you overlap the lines, creatures in the overlap make their saving throw at Disadvantage,
                     but don’t take damage from both lines. You may stop either line of fire at will on your turn, but
                     once you stop maintaining a line, you must expend another Hit Die to recreate a line and only so
                     long as the infusion is active. Your lines also make the area they affect difficult terrain, pushing
                     against all creatures.</p>
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can alter your lines of fire. You
+                    can change the synergy as a
+                    free action once per turn.
+                  <ul>
+                    <li><b>Aerofusion</b> extends the reach of your line to 30 feet.</li>
+                    <li><b>Bloodfusion</b> creates a toxic gas within the stream that deals necrotic damage equal to
+                      your Constitution modifier to
+                      all creatures within 5 feet of your line.</li>
+                    <li><b>Hydrofusion</b> transforms your line of fire into a lance of steam, adding piercing damage
+                      equal to your Constitution
+                      modifier to all creatures affected by this ability.</li>
+                  </ul>
+                  </p>
                 </li>
               </ul>
             </div>
@@ -1204,6 +1226,25 @@
                     <li><b>Success</b>: Creatures take half damage but do not fall prone.</li>
                   </ul>
                   </p>
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can enhance the bead. A bead can
+                    only withstand one synergy.
+                  <ul>
+                    <li><b>Aerofusion</b> empowers the explosion. All creatures within the area of the explosion have
+                      disadvantage on their saving
+                      throw. In addition, creatures that are Huge or smaller are knocked prone regardless of the result
+                      of the saving throw
+                      (unless the creature is immune to being knocked prone).</li>
+                    <li><b>Bloodfusion</b> creates a toxic gas, sickening all creatures within the area of the
+                      explosion. Creatures are sickened,
+                      regardless of the result of the saving throw, and have a 1d4 penalty to all saving throws, ability
+                      checks, and attacks
+                      for 1 minute.</li>
+                    <li><b>Hydrofusion</b> turns your explosion of flames into a substance similar to lava. The ground
+                      affected by the explosion
+                      becomes difficult terrain and any creature entering an affected space or begins its turn in one
+                      takes 1d4 fire damage.</li>
+                  </ul>
+                  </p>
                 </li>
               </ul>
             </div>
@@ -1228,6 +1269,26 @@
                     also ignite combustible materials such as parchment, straw, dry sticks, and cloth.</p>
                   <p><b>Empower</b>: You can spend up to 2 additional mana when triggering this ability to increase the
                     damage of the flame blade by 1d8 per mana.</p>
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can enhance the blade. Your blade
+                    can only use one synergy at a time,
+                    but you can change the synergy at will once per turn.
+                  <ul>
+                    <li><b>Aerofusion</b> extends the reach of your blade by 5 feet. On a critical hit, you add slashing
+                      damage equal to your
+                      Constitution modifier.</li>
+                    <li><b>Bloodfusion</b> adds a sickening edge to your blade, dealing necrotic damage equal to your
+                      Constitution modifier on a
+                      successful hit. On a critical hit, you absorb vitality from your foe and regain Hit Points equal
+                      to your Constitution
+                      modifier.</li>
+                    <li><b>Hydrofusion</b> causes your blade to splash flames at nearby creatures. On a hit, you can
+                      allow the flames to lash out at
+                      any number of creatures of your choice that are adjacent to your target, dealing fire damage equal
+                      to your Constitution
+                      modifier. On a critical hit, your target takes additional piercing damage equal to your
+                      Constitution modifier.</li>
+                  </ul>
+                  </p>
                 </li>
               </ul>
             </div>
@@ -1252,6 +1313,26 @@
                     Fireweaving tier you have mastered.
                   <ul>
                     <li><b>Success</b>: Creatures take half damage.</li>
+                  </ul>
+                  </p>
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can enhance your flame arrows. Your
+                    arrows can only use one synergy at
+                    a time, but you can change the synergy at will once per turn.
+                  <ul>
+                    <li><b>Aerofusion</b> adds slicing wings of wind to your ammunition, adding 1 slashing damage per
+                      Windweaving or Fireweaving tier
+                      you have mastered, taking the highest value.</li>
+                    <li><b>Bloodfusion</b> grants a blood-hungry aspect to your ammunition. Whenever you miss your
+                      target while using a flame arrow,
+                      you can reroll the attack. Otherwise on a hit, roll an attack against an additional creature
+                      within 30 feet of your
+                      original target. On a success, your flame arrow pierces through the first target and into the
+                      next, dealing necrotic
+                      damage equal to your Constitution modifier. (You cannot use this ability if your original attack
+                      was a miss.)</li>
+                    <li><b>Hydrofusion</b> strengthens the ammunition, increasing the damage added to 1d8 instead. This
+                      increase also affects the
+                      Empower ability of this infusion.</li>
                   </ul>
                   </p>
                 </li>
@@ -1284,6 +1365,24 @@
                     strikes. You can also control the sphere within 100 feet of you instead of 60 feet. Any creature
                     that fails its save against the sphere is overheated, suffering disadvantage on its next saving
                     throw or attack roll.</p>
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can enhance your sphere. Your
+                    sphere can only use one synergy at a
+                    time, but you can change the synergy at will once per turn.
+                  <ul>
+                    <li><b>Aerofusion</b> increases the speed of your sphere, allowing it to move 40 feet per round.
+                    </li>
+                    <li><b>Bloodfusion</b> disrupts the flesh of the creature affected by your sphere. Creatures that
+                      take damage from your sphere
+                      cannot heal for 1 minute.</li>
+                    <li><b>Hydrofusion</b> leaves liquid flame on the ground where your sphere travels. The route your
+                      sphere moves creates difficult
+                      terrain, and creatures moving into or through any area affected in this manner take fire damage
+                      equal to your
+                      Constitution modifier. Surfaces remain affected in this way so long as it is within 30 feet of
+                      your sphere and only if
+                      this synergy is active.</li>
+                  </ul>
+                  </p>
                 </li>
               </ul>
             </div>
@@ -1308,6 +1407,19 @@
                     turn.</p>
                   <p><b>Empower</b>: You can increase the damage of this ability by 1d6 for 1 mana. Damage taken by
                     catching on fire does not increase, but its duration now lasts 2 turns instead of 1.</p>
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can enhance your fire cloak. You
+                    can only use one synergy at a time,
+                    but you can change the synergy at will once per turn.
+                  <ul>
+                    <li><b>Aerofusion</b> deflects attacks made against you. You can +1 to your AC.</li>
+                    <li><b>Bloodfusion</b> buffers your lifeforce. At the start of each of your turns while you are
+                      conscious, you gain temporary Hit
+                      Points equal to your Constitution modifier.</li>
+                    <li><b>Hydrofusion</b> decreases the velocity of physical attacks made against you. You gain +1
+                      damage resistance against
+                      piercing, bludgeoning, and slashing damage.</li>
+                  </ul>
+                  </p>
                 </li>
               </ul>
             </div>
@@ -1345,7 +1457,26 @@
                       Wildfire effect remains the same.</li>
                   </ul>
                   </p>
-                  <p><b>Synergy</b>: For every Windweaving tier you master, your contagious burst increases by 5 feet.
+                  <p><b>Synergy</b>: If you have an affinity to other infusions, you can enhance your wildfire. You can
+                    only use one synergy at a time, but
+                    you can change the synergy at will once per turn.
+                  <ul>
+                    <li><b>Aerofusion</b> increases the burst of your wildfire. For every Windweaving tier you master,
+                      your contagious burst increases
+                      by 5 feet.</li>
+                    <li><b>Bloodfusion</b> regenerates your lifeforce as the wildfire spreads. The first time a creature
+                      gains Wildfire flames, you
+                      regain Hit Points equal to your Constitution modifier. You cannot regain Hit Points beyond your
+                      maximum.</li>
+                    <li><b>Hydrofusion</b> makes your Wildfire more resilient. Even when a creature douses the flames
+                      from its body, it takes
+                      additional fire damage equal to your Constitution modifier at the end of its turn. When water is
+                      used to douse Wildfire,
+                      the flames remain dangerous for one additional turn (dealing damage, spreading, or allowing
+                      affects as usual). Finally,
+                      any Hydrofusion abilities used to douse the flames must cost 2 Hit Die or 2 mana instead.</li>
+                  </ul>
+                  </p>
                   </p>
                 </li>
               </ul>
