--- a/content/psionics.html
+++ b/content/psionics.html
@@ -2949,10 +2949,14 @@
                             <li><b>Range: </b>10 feet</li>
                             <li><b>Duration: </b>Concentration, up to 1 minute</li>
                             <li>Your psionic power allows you to command several weapons at once. As an action, you
-                                choose 7 melee weapons within 10 feet of you that are not held by another creature
-                                and make an attack with advantage with all of them as if they were one, or you may
-                                move them independently and make one normal attack with each one in any combination
-                                against targets within 30 feet of you.</li>
+                                choose 7 melee weapons within 10
+                                feet of you that are not held by another creature and make an attack with advantage with
+                                all of them as if they were
+                                one. For this grouped attack, each weapon deals damage but any effects or bonus damage
+                                from ability modifiers are only
+                                applied once. Alternatively, you may move the weapons independently and make one normal
+                                attack with each one in any
+                                combination against targets within 30 feet of you.</li>
                         </ul>
                     </div>
                 </div>
