--- a/content/psionics.html
+++ b/content/psionics.html
@@ -2288,7 +2288,7 @@
                             <li><b>Evoking Time: </b>1 bonus action</li>
                             <li><b>Range: </b>60 feet</li>
                             <li><b>Duration: </b>Instantaneous</li>
-                            <li>YYou and up to five allies you can see within 60 feet of you can immediately make saving
+                            <li>You and up to five allies you can see within 60 feet of you can immediately make saving
                                 throws against every effect
                                 they’re suffering that allows a save at the start or end of their turns. If a creature
                                 successfully saves, it gains a
